k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim # References the PVC object we want to use
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # References the pod template volume section name
              mountPath: /var/lib/postgresql/data # Path where container thinks it is writing the data, but ultimately data gets written to Persistent Volume's folder(below)
              subPath: postgres # Folder on Persistent Volume where data is stored
